name:                ghc-api-compat
version:             8.2
synopsis:            Provide GHC-API compatibility with older GHC versions
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Sylvain Henry
maintainer:          sylvain@haskus.fr
-- copyright:           
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.22

library
   build-depends:
      ghc >= 8.3
   hs-source-dirs:      src
   default-language:    Haskell2010

   reexported-modules:
        GHC
      , GHC.Builtin.Names                                               as  PrelNames
      , GHC.Builtin.Names.TemplateHaskell                               as  THNames
      , GHC.Builtin.Primitive.Operations                                as  PrimOp
      , GHC.Builtin.Primitive.Types                                     as  TysPrim
      , GHC.Builtin.TypeNats                                            as  TcTypeNats
      , GHC.Builtin.Types                                               as  TysWiredIn
      , GHC.Builtin.Uniques                                             as  KnownUniques
      , GHC.Builtin.Utils                                               as  PrelInfo
      , GHC.ByteCode.Assembler                                          as  ByteCodeAsm
      , GHC.ByteCode.InfoTable                                          as  ByteCodeItbls
      , GHC.ByteCode.Instruction                                        as  ByteCodeInstr
      , GHC.ByteCode.Linker                                             as  ByteCodeLink
      , GHC.ByteCode.Types                                              as  ByteCodeTypes
      , GHC.Cmm.CommonBlockElim                                         as  CmmCommonBLockElim
      , GHC.Cmm.ConstantFolder                                          as  CmmOpt
      , GHC.Cmm.Dataflow                                                as  Hoopl
      , GHC.Cmm.Dataflow.Block                                          as  Hoopl.Block
      , GHC.Cmm.Dataflow.Collections                                    as  Hoopl.Collections
      , GHC.Cmm.Dataflow.Graph                                          as  Hoopl.Graph
      , GHC.Cmm.Dataflow.Label                                          as  Hoopl.Label
      , GHC.Cmm.Dataflow.Unique                                         as  Hoopl.Unique
      , GHC.Cmm.InfoTableBuilder                                        as  CmmBuildInfoTables
      , GHC.Cmm.LayoutStack                                             as  CmmLayoutStack
      , GHC.Cmm.Lexer                                                   as  CmmLex
      , GHC.Cmm.Lint                                                    as  CmmLint
      , GHC.Cmm.Liveness                                                as  CmmLive
      , GHC.Cmm.Parser                                                  as  CmmParse
      , GHC.Cmm.Parser.Monad                                            as  CmmMonad
      , GHC.Cmm.Pipeline                                                as  CmmPipeline
      , GHC.Cmm.Printer                                                 as  PprCmm
      , GHC.Cmm.Printer.Declaration                                     as  PprCmmDecl
      , GHC.Cmm.Printer.Expression                                      as  PprCmmExpr
      , GHC.Cmm.ProcPoint                                               as  CmmProcPoint
      , GHC.Cmm.Shortcutter                                             as  CmmContFlowOpt
      , GHC.Cmm.Sinker                                                  as  CmmSink
      , GHC.Cmm.Switch                                                  as  CmmSwitch
      , GHC.Cmm.Switch.Implement                                        as  CmmImplementSwitchPlans
      , GHC.Cmm.Syntax                                                  as  Cmm
      , GHC.Cmm.Syntax.BlockId                                          as  BlockId
      , GHC.Cmm.Syntax.CallConvention                                   as  CmmCallConv
      , GHC.Cmm.Syntax.DebugBlock                                       as  Debug
      , GHC.Cmm.Syntax.Expression                                       as  CmmExpr
      , GHC.Cmm.Syntax.Graph                                            as  MkGraph
      , GHC.Cmm.Syntax.MachinePrimOps                                   as  CmmMachOp
      , GHC.Cmm.Syntax.Node                                             as  CmmNode
      , GHC.Cmm.Syntax.Type                                             as  CmmType
      , GHC.Cmm.Utils                                                   as  CmmUtils
      , GHC.Compiler.CmmToAsm                                           as  AsmCodeGen
      , GHC.Compiler.CmmToAsm.Dwarf                                     as  Dwarf
      , GHC.Compiler.CmmToAsm.Dwarf.Constants                           as  Dwarf.Constants
      , GHC.Compiler.CmmToAsm.Dwarf.Types                               as  Dwarf.Types
      , GHC.Compiler.CmmToAsm.Format                                    as  Format
      , GHC.Compiler.CmmToAsm.Instruction                               as  Instruction
      , GHC.Compiler.CmmToAsm.Monad                                     as  NCGMonad
      , GHC.Compiler.CmmToAsm.PIC                                       as  PIC
      , GHC.Compiler.CmmToAsm.PPC.CodeGen                               as  PPC.CodeGen
      , GHC.Compiler.CmmToAsm.PPC.Cond                                  as  PPC.Cond
      , GHC.Compiler.CmmToAsm.PPC.Instr                                 as  PPC.Instr
      , GHC.Compiler.CmmToAsm.PPC.Ppr                                   as  PPC.Ppr
      , GHC.Compiler.CmmToAsm.PPC.RegInfo                               as  PPC.RegInfo
      , GHC.Compiler.CmmToAsm.PPC.Regs                                  as  PPC.Regs
      , GHC.Compiler.CmmToAsm.PrettyPrint                               as  PprBase
      , GHC.Compiler.CmmToAsm.Register.Allocator.Graph.ArchBase         as  RegAlloc.Graph.ArchBase
      , GHC.Compiler.CmmToAsm.Register.Allocator.Graph.ArchX86          as  RegAlloc.Graph.ArchX86
      , GHC.Compiler.CmmToAsm.Register.Allocator.Graph.Coalesce         as  RegAlloc.Graph.Coalesce
      , GHC.Compiler.CmmToAsm.Register.Allocator.Graph.Main             as  RegAlloc.Graph.Main
      , GHC.Compiler.CmmToAsm.Register.Allocator.Graph.Spill            as  RegAlloc.Graph.Spill
      , GHC.Compiler.CmmToAsm.Register.Allocator.Graph.SpillClean       as  RegAlloc.Graph.SpillClean
      , GHC.Compiler.CmmToAsm.Register.Allocator.Graph.SpillCost        as  RegAlloc.Graph.SpillCost
      , GHC.Compiler.CmmToAsm.Register.Allocator.Graph.Stats            as  RegAlloc.Graph.Stats
      , GHC.Compiler.CmmToAsm.Register.Allocator.Graph.TrivColorable    as  RegAlloc.Graph.TrivColorable
      , GHC.Compiler.CmmToAsm.Register.Allocator.Linear.Base            as  RegAlloc.Linear.Base
      , GHC.Compiler.CmmToAsm.Register.Allocator.Linear.FreeRegs        as  RegAlloc.Linear.FreeRegs
      , GHC.Compiler.CmmToAsm.Register.Allocator.Linear.JoinToTargets   as  RegAlloc.Linear.JoinToTargets
      , GHC.Compiler.CmmToAsm.Register.Allocator.Linear.Main            as  RegAlloc.Linear.Main
      , GHC.Compiler.CmmToAsm.Register.Allocator.Linear.PPC.FreeRegs    as  RegAlloc.Linear.PPC.FreeRegs
      , GHC.Compiler.CmmToAsm.Register.Allocator.Linear.SPARC.FreeRegs  as  RegAlloc.Linear.SPARC.FreeRegs
      , GHC.Compiler.CmmToAsm.Register.Allocator.Linear.StackMap        as  RegAlloc.Linear.StackMap
      , GHC.Compiler.CmmToAsm.Register.Allocator.Linear.State           as  RegAlloc.Linear.State
      , GHC.Compiler.CmmToAsm.Register.Allocator.Linear.Stats           as  RegAlloc.Linear.Stats
      , GHC.Compiler.CmmToAsm.Register.Allocator.Linear.X86_64.FreeRegs as  RegAlloc.Linear.X86_64.FreeRegs
      , GHC.Compiler.CmmToAsm.Register.Allocator.Linear.X86.FreeRegs    as  RegAlloc.Linear.X86.FreeRegs
      , GHC.Compiler.CmmToAsm.Register.Allocator.Liveness               as  RegAlloc.Liveness
      , GHC.Compiler.CmmToAsm.Register                                  as  Reg
      , GHC.Compiler.CmmToAsm.Register.Class                            as  RegClass
      , GHC.Compiler.CmmToAsm.Register.Target                           as  TargetReg
      , GHC.Compiler.CmmToAsm.SPARC.AddrMode                            as  SPARC.AddrMode
      , GHC.Compiler.CmmToAsm.SPARC.Base                                as  SPARC.Base
      , GHC.Compiler.CmmToAsm.SPARC.CodeGen.Amode                       as  SPARC.CodeGen.Amode
      , GHC.Compiler.CmmToAsm.SPARC.CodeGen                             as  SPARC.CodeGen
      , GHC.Compiler.CmmToAsm.SPARC.CodeGen.Base                        as  SPARC.CodeGen.Base
      , GHC.Compiler.CmmToAsm.SPARC.CodeGen.CondCode                    as  SPARC.CodeGen.CondCode
      , GHC.Compiler.CmmToAsm.SPARC.CodeGen.Expand                      as  SPARC.CodeGen.Expand
      , GHC.Compiler.CmmToAsm.SPARC.CodeGen.Gen32                       as  SPARC.CodeGen.Gen32
      , GHC.Compiler.CmmToAsm.SPARC.CodeGen.Gen64                       as  SPARC.CodeGen.Gen64
      , GHC.Compiler.CmmToAsm.SPARC.CodeGen.Sanity                      as  SPARC.CodeGen.Sanity
      , GHC.Compiler.CmmToAsm.SPARC.Cond                                as  SPARC.Cond
      , GHC.Compiler.CmmToAsm.SPARC.Imm                                 as  SPARC.Imm
      , GHC.Compiler.CmmToAsm.SPARC.Instr                               as  SPARC.Instr
      , GHC.Compiler.CmmToAsm.SPARC.Ppr                                 as  SPARC.Ppr
      , GHC.Compiler.CmmToAsm.SPARC.Regs                                as  SPARC.Regs
      , GHC.Compiler.CmmToAsm.SPARC.ShortcutJump                        as  SPARC.ShortcutJump
      , GHC.Compiler.CmmToAsm.SPARC.Stack                               as  SPARC.Stack
      , GHC.Compiler.CmmToAsm.X86.CodeGen                               as  X86.CodeGen
      , GHC.Compiler.CmmToAsm.X86.Cond                                  as  X86.Cond
      , GHC.Compiler.CmmToAsm.X86.Instr                                 as  X86.Instr
      , GHC.Compiler.CmmToAsm.X86.Ppr                                   as  X86.Ppr
      , GHC.Compiler.CmmToAsm.X86.RegInfo                               as  X86.RegInfo
      , GHC.Compiler.CmmToAsm.X86.Regs                                  as  X86.Regs
      , GHC.Compiler.CmmToC                                             as  PprC
      , GHC.Compiler.CmmToLlvm                                          as  Llvm
      , GHC.Compiler.CmmToLlvm.CodeGen                                  as  LlvmCodeGen
      , GHC.Compiler.CmmToLlvm.CodeGen.Base                             as  LlvmCodeGen.Base
      , GHC.Compiler.CmmToLlvm.CodeGen.Data                             as  LlvmCodeGen.Data
      , GHC.Compiler.CmmToLlvm.CodeGen.PrettyPrint                      as  LlvmCodeGen.Ppr
      , GHC.Compiler.CmmToLlvm.CodeGen.Proc                             as  LlvmCodeGen.CodeGen
      , GHC.Compiler.CmmToLlvm.CodeGen.Regs                             as  LlvmCodeGen.Regs
      , GHC.Compiler.CmmToLlvm.Fixup                                    as  LlvmMangler
      , GHC.Compiler.CoreToByteCode                                     as  ByteCodeGen
      , GHC.Compiler.CoreToInterface                                    as  ToIface
      , GHC.Compiler.CoreToStg                                          as  CoreToStg
      , GHC.Core.Prepare                                                as  CorePrep
      , GHC.Compiler.HaskellToCore.Arrow                                as  DsArrows
      , GHC.Compiler.HaskellToCore                                      as  Desugar
      , GHC.Compiler.HaskellToCore.Binding                              as  DsBinds
      , GHC.Compiler.HaskellToCore.Coverage                             as  Coverage
      , GHC.Compiler.HaskellToCore.Expression                           as  DsExpr
      , GHC.Compiler.HaskellToCore.Foreign.Call                         as  DsCCall
      , GHC.Compiler.HaskellToCore.Foreign.Declaration                  as  DsForeign
      , GHC.Compiler.HaskellToCore.GuardedRHS                           as  DsGRHSs
      , GHC.Compiler.HaskellToCore.ListComp                             as  DsListComp
      , GHC.Compiler.HaskellToCore.Match                                as  Match
      , GHC.Compiler.HaskellToCore.Match.Check                          as  Check
      , GHC.Compiler.HaskellToCore.Match.Constructor                    as  MatchCon
      , GHC.Compiler.HaskellToCore.Match.Expression                     as  PmExpr
      , GHC.Compiler.HaskellToCore.Match.Literal                        as  MatchLit
      , GHC.Compiler.HaskellToCore.Match.TermEqOracle                   as  TmOracle
      , GHC.Compiler.HaskellToCore.Monad                                as  DsMonad
      , GHC.Compiler.HaskellToCore.Splice                               as  DsMeta
      , GHC.Compiler.HaskellToCore.Usage                                as  DsUsage
      , GHC.Compiler.HaskellToCore.Utils                                as  DsUtils
      , GHC.Compiler.StgToCmm.ArgRep                                    as  StgCmmArgRep
      , GHC.Compiler.StgToCmm                                           as  StgCmm
      , GHC.Compiler.StgToCmm.Binding                                   as  StgCmmBind
      , GHC.Compiler.StgToCmm.Closure                                   as  StgCmmClosure
      , GHC.Compiler.StgToCmm.Constructor                               as  StgCmmCon
      , GHC.Compiler.StgToCmm.Coverage                                  as  StgCmmHpc
      , GHC.Compiler.StgToCmm.Environment                               as  StgCmmEnv
      , GHC.Compiler.StgToCmm.Expression                                as  StgCmmExpr
      , GHC.Compiler.StgToCmm.ForeignCall                               as  StgCmmForeign
      , GHC.Compiler.StgToCmm.Heap                                      as  StgCmmHeap
      , GHC.Compiler.StgToCmm.Layout                                    as  StgCmmLayout
      , GHC.Compiler.StgToCmm.Monad                                     as  StgCmmMonad
      , GHC.Compiler.StgToCmm.Monad.Extended                            as  StgCmmExtCode
      , GHC.Compiler.StgToCmm.PrimOp                                    as  StgCmmPrim
      , GHC.Compiler.StgToCmm.Profiling                                 as  StgCmmProf
      , GHC.Compiler.StgToCmm.Profiling.Ticky                           as  StgCmmTicky
      , GHC.Compiler.StgToCmm.Utils                                     as  StgCmmUtils
      , GHC.Compiler.TemplateToHaskell                                  as  Convert
      , GHC.Config.Constants                                            as  Constants
      , GHC.Config.Flags                                                as  DynFlags
      , GHC.Config.Flags.Fingerprint                                    as  FlagChecker
      , GHC.Config.Hooks                                                as  Hooks
      , GHC.Config.HostPlatform                                         as  PlatformConstants
      , GHC.Core.Arity                                                  as  CoreArity
      , GHC.Core.CallArity                                              as  CallArity
      , GHC.Core.CommonSubExpr                                          as  CSE
      , GHC.Core.ConstantFold                                           as  PrelRules
      , GHC.Core.Demand                                                 as  DmdAnal
      , GHC.Core.FloatIn                                                as  FloatIn
      , GHC.Core.FloatOut                                               as  FloatOut
      , GHC.Core.FreeVars                                               as  CoreFVs
      , GHC.Core.Inliner                                                as  CoreUnfold
      , GHC.Core.LevelSet                                               as  SetLevels
      , GHC.Core.LiberateCase                                           as  LiberateCase
      , GHC.Core.Lint                                                   as  CoreLint
      , GHC.Core.Monad                                                  as  CoreMonad
      , GHC.Core.Occurence                                              as  OccurAnal
      , GHC.Core.Pipeline                                               as  SimplCore
      , GHC.Core.Printer                                                as  PprCore
      , GHC.Core.Rules                                                  as  Rules
      , GHC.Core.SimpleOpt                                              as  CoreOpt
      , GHC.Core.Simplify                                               as  Simplify
      , GHC.Core.Simplify.Environment                                   as  SimplEnv
      , GHC.Core.Simplify.Monad                                         as  SimplMonad
      , GHC.Core.Simplify.Utils                                         as  SimplUtils
      , GHC.Core.Specialise                                             as  Specialise
      , GHC.Core.Specialise.Constructor                                 as  SpecConstr
      , GHC.Core.StaticArgument                                         as  SAT
      , GHC.Core.Stats                                                  as  CoreStats
      , GHC.Core.Substitution                                           as  CoreSubst
      , GHC.Core.Syntax                                                 as  CoreSyn
      , GHC.Core.Syntax.Force                                           as  CoreSeq
      , GHC.Core.Syntax.Make                                            as  MkCore
      , GHC.Core.Tidy                                                   as  CoreTidy
      , GHC.Core.Utils                                                  as  CoreUtils
      , GHC.Core.Vectorise                                              as  Vectorise
      , GHC.Core.Vectorise.Builtins                                     as  Vectorise.Builtins
      , GHC.Core.Vectorise.Builtins.Base                                as  Vectorise.Builtins.Base
      , GHC.Core.Vectorise.Builtins.Initialise                          as  Vectorise.Builtins.Initialise
      , GHC.Core.Vectorise.Convert                                      as  Vectorise.Convert
      , GHC.Core.Vectorise.Env                                          as  Vectorise.Env
      , GHC.Core.Vectorise.Exp                                          as  Vectorise.Exp
      , GHC.Core.Vectorise.Generic.Description                          as  Vectorise.Generic.Description
      , GHC.Core.Vectorise.Generic.PADict                               as  Vectorise.Generic.PADict
      , GHC.Core.Vectorise.Generic.PAMethods                            as  Vectorise.Generic.PAMethods
      , GHC.Core.Vectorise.Generic.PData                                as  Vectorise.Generic.PData
      , GHC.Core.Vectorise.Monad                                        as  Vectorise.Monad
      , GHC.Core.Vectorise.Monad.Base                                   as  Vectorise.Monad.Base
      , GHC.Core.Vectorise.Monad.Global                                 as  Vectorise.Monad.Global
      , GHC.Core.Vectorise.Monad.InstEnv                                as  Vectorise.Monad.InstEnv
      , GHC.Core.Vectorise.Monad.Local                                  as  Vectorise.Monad.Local
      , GHC.Core.Vectorise.Monad.Naming                                 as  Vectorise.Monad.Naming
      , GHC.Core.Vectorise.Type.Classify                                as  Vectorise.Type.Classify
      , GHC.Core.Vectorise.Type.Env                                     as  Vectorise.Type.Env
      , GHC.Core.Vectorise.Type.TyConDecl                               as  Vectorise.Type.TyConDecl
      , GHC.Core.Vectorise.Type.Type                                    as  Vectorise.Type.Type
      , GHC.Core.Vectorise.Utils                                        as  Vectorise.Utils
      , GHC.Core.Vectorise.Utils.Base                                   as  Vectorise.Utils.Base
      , GHC.Core.Vectorise.Utils.Closure                                as  Vectorise.Utils.Closure
      , GHC.Core.Vectorise.Utils.Hoisting                               as  Vectorise.Utils.Hoisting
      , GHC.Core.Vectorise.Utils.PADict                                 as  Vectorise.Utils.PADict
      , GHC.Core.Vectorise.Utils.Poly                                   as  Vectorise.Utils.Poly
      , GHC.Core.Vectorise.Var                                          as  Vectorise.Var
      , GHC.Core.WorkerWrap                                             as  WorkWrap
      , GHC.Core.WorkerWrap.Utils                                       as  WwLib
      , GHC.Data.Bag                                                    as  Bag
      , GHC.Data.Bitmap                                                 as  Bitmap
      , GHC.Data.BoolFormula                                            as  BooleanFormula
      , GHC.Data.Char.Classification                                    as  Ctype
      , GHC.Data.Char.Encoding                                          as  Encoding
      , GHC.Data.EnumSet                                                as  EnumSet
      , GHC.Data.FastMutableInt                                         as  FastMutInt
      , GHC.Data.FastString                                             as  FastString
      , GHC.Data.FastString.Environment                                 as  FastStringEnv
      , GHC.Data.FiniteMap                                              as  FiniteMap
      , GHC.Data.Graph.Base                                             as  GraphBase
      , GHC.Data.Graph.Color                                            as  GraphColor
      , GHC.Data.Graph.Directed                                         as  Digraph
      , GHC.Data.Graph.Operations                                       as  GraphOps
      , GHC.Data.Graph.PrettyPrint                                      as  GraphPpr
      , GHC.Data.List.SetOps                                            as  ListSetOps
      , GHC.Data.Maybe                                                  as  Maybes
      , GHC.Data.OrdList                                                as  OrdList
      , GHC.Data.Pair                                                   as  Pair
      , GHC.Data.Stream                                                 as  Stream
      , GHC.Data.StringBuffer                                           as  StringBuffer
      , GHC.Data.TrieMap                                                as  TrieMap
      , GHC.Data.UniqueDFM                                              as  UniqDFM
      , GHC.Data.UniqueDSet                                             as  UniqDSet
      , GHC.Data.UniqueFM                                               as  UniqFM
      , GHC.Data.UniqueMap                                              as  UniqMap
      , GHC.Data.UniqueSet                                              as  UniqSet
      , GHC.Data.UniqueSupply                                           as  UniqSupply
      , GHC.Driver.BackPack.Main                                        as  DriverBkp
      , GHC.Driver.BackPack.Syntax                                      as  BkpSyn
      , GHC.Driver.CmdLineParser                                        as  CmdLineParser
      , GHC.Driver.CodeOutput                                           as  CodeOutput
      , GHC.Driver.Finder                                               as  Finder
      , GHC.Driver.Main                                                 as  HscMain
      , GHC.Driver.Make                                                 as  GhcMake
      , GHC.Driver.MakeDepend                                           as  DriverMkDepend
      , GHC.Driver.Phases                                               as  DriverPhases
      , GHC.Driver.Pipeline                                             as  DriverPipeline
      , GHC.Driver.Pipeline.Monad                                       as  PipelineMonad
      , GHC.Haskell.Derive.BasicClasses                                 as  TcGenDeriv
      , GHC.Haskell.Derive.Constraints                                  as  TcDerivInfer
      , GHC.Haskell.Derive.Functor                                      as  TcGenFunctor
      , GHC.Haskell.Derive.Generic                                      as  TcGenGenerics
      , GHC.Haskell.Derive.Typeable                                     as  TcTypeable
      , GHC.Haskell.Derive.Utils                                        as  TcDerivUtils
      , GHC.Haskell.Lexer                                               as  Lexer
      , GHC.Haskell.Parser                                              as  Parser
      , GHC.Haskell.Parser.HeaderInfo                                   as  HeaderInfo
      , GHC.Haskell.Parser.Syntax                                       as  RdrHsSyn
      , GHC.Haskell.Parser.Utils                                        as  HaddockUtils
      , GHC.Haskell.Printer.Dump                                        as  HsDumpAst
      , GHC.Haskell.Rename                                              as  RnSource
      , GHC.Haskell.Rename.Binding                                      as  RnBinds
      , GHC.Haskell.Rename.Documentation                                as  RnHsDoc
      , GHC.Haskell.Rename.Environment                                  as  RnEnv
      , GHC.Haskell.Rename.Expression                                   as  RnExpr
      , GHC.Haskell.Rename.Fixity                                       as  RnFixity
      , GHC.Haskell.Rename.ImportExport                                 as  RnNames
      , GHC.Haskell.Rename.Pattern                                      as  RnPat
      , GHC.Haskell.Rename.Splice                                       as  RnSplice
      , GHC.Haskell.Rename.Type                                         as  RnTypes
      , GHC.Haskell.Rename.Utils                                        as  RnUtils
      , GHC.Haskell.Rename.Utils.Unbound                                as  RnUnbound
      , GHC.Haskell.Stats                                               as  HscStats
      , GHC.Haskell.Syntax.Annotation                                   as  ApiAnnotation
      , GHC.Haskell.Syntax                                              as  HsSyn
      , GHC.Haskell.Syntax.Binding                                      as  HsBinds
      , GHC.Haskell.Syntax.Declaration                                  as  HsDecls
      , GHC.Haskell.Syntax.Documentation                                as  HsDoc
      , GHC.Haskell.Syntax.Expression                                   as  HsExpr
      , GHC.Haskell.Syntax.Extension                                    as  HsExtension
      , GHC.Haskell.Syntax.ImportExport                                 as  HsImpExp
      , GHC.Haskell.Syntax.Literal                                      as  HsLit
      , GHC.Haskell.Syntax.Pattern                                      as  HsPat
      , GHC.Haskell.Syntax.PlaceHolder                                  as  PlaceHolder
      , GHC.Haskell.Syntax.Type                                         as  HsTypes
      , GHC.Haskell.TypeCheck.Annotation                                as  TcAnnotations
      , GHC.Haskell.TypeCheck.Arrow                                     as  TcArrows
      , GHC.Haskell.TypeCheck                                           as  TcRnMonad
      , GHC.Haskell.TypeCheck.Binding                                   as  TcBinds
      , GHC.Haskell.TypeCheck.ClassDeclaration                          as  TcClassDcl
      , GHC.Haskell.TypeCheck.Constraint.Canonicalise                   as  TcCanonical
      , GHC.Haskell.TypeCheck.Constraint.Interact                       as  TcInteract
      , GHC.Haskell.TypeCheck.Constraint.Simplify                       as  TcSimplify
      , GHC.Haskell.TypeCheck.Constraint.Solve                          as  TcSMonad
      , GHC.Haskell.TypeCheck.Default                                   as  TcDefaults
      , GHC.Haskell.TypeCheck.Deriving                                  as  TcDeriv
      , GHC.Haskell.TypeCheck.Environment                               as  TcEnv
      , GHC.Haskell.TypeCheck.Error                                     as  TcErrors
      , GHC.Haskell.TypeCheck.Evidence                                  as  TcEvidence
      , GHC.Haskell.TypeCheck.Export                                    as  TcRnExports
      , GHC.Haskell.TypeCheck.Expression                                as  TcExpr
      , GHC.Haskell.TypeCheck.FamilyInstance                            as  FamInst
      , GHC.Haskell.TypeCheck.Flatten                                   as  TcFlatten
      , GHC.Haskell.TypeCheck.Foreign                                   as  TcForeign
      , GHC.Haskell.TypeCheck.FunctionalDependency                      as  FunDeps
      , GHC.Haskell.TypeCheck.Instance                                  as  TcInstDcls
      , GHC.Haskell.TypeCheck.Instantiation                             as  Inst
      , GHC.Haskell.TypeCheck.Matches                                   as  TcMatches
      , GHC.Haskell.TypeCheck.Module                                    as  TcRnDriver
      , GHC.Haskell.TypeCheck.ModuleSignature                           as  TcBackpack
      , GHC.Haskell.TypeCheck.MutableType                               as  TcMType
      , GHC.Haskell.TypeCheck.Pattern                                   as  TcPat
      , GHC.Haskell.TypeCheck.PatternSynonym                            as  TcPatSyn
      , GHC.Haskell.TypeCheck.Rule                                      as  TcRules
      , GHC.Haskell.TypeCheck.Signature                                 as  TcSigs
      , GHC.Haskell.TypeCheck.Splice                                    as  TcSplice
      , GHC.Haskell.TypeCheck.Syntax                                    as  TcHsSyn
      , GHC.Haskell.TypeCheck.TypeAndClassDeclaration                   as  TcTyClsDecls
      , GHC.Haskell.TypeCheck.Type                                      as  TcType
      , GHC.Haskell.TypeCheck.TypeDeclaration                           as  TcTyDecls
      , GHC.Haskell.TypeCheck.Types                                     as  TcRnTypes
      , GHC.Haskell.TypeCheck.Unify                                     as  TcUnify
      , GHC.Haskell.TypeCheck.UserType                                  as  TcHsType
      , GHC.Haskell.TypeCheck.Validity                                  as  TcValidity
      , GHC.Haskell.Utils                                               as  HsUtils
      , GHC.Interactive.ClosureInspect                                  as  RtClosureInspect
      , GHC.Interactive.Debugger                                        as  Debugger
      , GHC.Interactive.Debugger.Utils                                  as  DebuggerUtils
      , GHC.Interactive.DynamicLoading                                  as  DynamicLoading
      , GHC.Interactive.Eval                                            as  InteractiveEval
      , GHC.Interactive.Interpreter                                     as  GHCi
      , GHC.Interactive.Linker                                          as  Linker
      , GHC.Interactive.Types                                           as  InteractiveEvalTypes
      , GHC.Interface.Binary                                            as  BinIface
      , GHC.Interface.BuildTypeAndClass                                 as  BuildTyCl
      , GHC.Interface.Environment                                       as  IfaceEnv
      , GHC.Interface.Load                                              as  LoadIface
      , GHC.Interface.Rename                                            as  RnModIface
      , GHC.Interface.Syntax                                            as  IfaceSyn
      , GHC.Interface.Tidy                                              as  TidyPgm
      , GHC.Interface.TypeCheck                                         as  TcIface
      , GHC.Interface.Types                                             as  IfaceType
      , GHC.Interface.Utils                                             as  MkIface
      , GHC.Llvm.MetaData                                               as  Llvm.MetaData
      , GHC.Llvm.Printer                                                as  Llvm.PpLlvm
      , GHC.Llvm.Syntax                                                 as  Llvm.AbsSyn
      , GHC.Llvm.Types                                                  as  Llvm.Types
      , GHC.Monad                                                       as  GhcMonad
      , GHC.Packages                                                    as  Packages
      , GHC.Packages.PackageConfig                                      as  PackageConfig
      , GHC.Plugin                                                      as  GhcPlugins
      , GHC.Plugin.TypeChecker                                          as  TcPluginM
      , GHC.Plugin.Types                                                as  Plugins
      , GHC.RTS.InfoTable                                               as  CmmInfo
      , GHC.RTS.Storage                                                 as  SMRep
      , GHC.Stg.CommonSubExpr                                           as  StgCse
      , GHC.Stg.CostCentreCollect                                       as  SCCfinal
      , GHC.Stg.Lint                                                    as  StgLint
      , GHC.Stg.Pipeline                                                as  SimplStg
      , GHC.Stg.Stats                                                   as  StgStats
      , GHC.Stg.Syntax                                                  as  StgSyn
      , GHC.Stg.Unarise                                                 as  UnariseStg
      , GHC.Stg.Utils                                                   as  CgUtils
      , GHC.Types.Annotation                                            as  Annotations
      , GHC.Types.Available                                             as  Avail
      , GHC.Types.Base                                                  as  HscTypes
      , GHC.Types.BasicTypes                                            as  BasicTypes
      , GHC.Types.CLabel                                                as  CLabel
      , GHC.Types.Class                                                 as  Class
      , GHC.Types.Coercion                                              as  Coercion
      , GHC.Types.Coercion.Axiom                                        as  CoAxiom
      , GHC.Types.Coercion.Optimise                                     as  OptCoercion
      , GHC.Types.ConstructorLike                                       as  ConLike
      , GHC.Types.CostCentre                                            as  CostCentre
      , GHC.Types.CostCentre.Init                                       as  ProfInit
      , GHC.Types.DataCon                                               as  DataCon
      , GHC.Types.Demand                                                as  Demand
      , GHC.Types.FamilyInstance                                        as  FamInstEnv
      , GHC.Types.FieldLabel                                            as  FieldLabel
      , GHC.Types.ForeignCall                                           as  ForeignCall
      , GHC.Types.Id                                                    as  Id
      , GHC.Types.Id.Info                                               as  IdInfo
      , GHC.Types.Id.Make                                               as  MkId
      , GHC.Types.Instance                                              as  InstEnv
      , GHC.Types.Kind                                                  as  Kind
      , GHC.Types.Literal                                               as  Literal
      , GHC.Types.Module                                                as  Module
      , GHC.Types.Name                                                  as  Name
      , GHC.Types.Name.Cache                                            as  NameCache
      , GHC.Types.Name.Environment                                      as  NameEnv
      , GHC.Types.Name.Set                                              as  NameSet
      , GHC.Types.NameShape                                             as  NameShape
      , GHC.Types.OccName                                               as  OccName
      , GHC.Types.PatternSynonym                                        as  PatSyn
      , GHC.Types.RdrName                                               as  RdrName
      , GHC.Types.RepType                                               as  RepType
      , GHC.Types.SrcLoc                                                as  SrcLoc
      , GHC.Types.TyCon                                                 as  TyCon
      , GHC.Types.TypeAndCoercion                                       as  TyCoRep
      , GHC.Types.Type                                                  as  Type
      , GHC.Types.Type.Unify                                            as  Unify
      , GHC.Types.Var                                                   as  Var
      , GHC.Types.Var.Environment                                       as  VarEnv
      , GHC.Types.Var.Free                                              as  FV
      , GHC.Types.Var.Set                                               as  VarSet
      , GHC.Types.Var.UndirectedGraph                                   as  UnVarGraph
      , GHC.Utils                                                       as  Util
      , GHC.Utils.Binary                                                as  Binary
      , GHC.Utils.Binary.Fingerprint                                    as  BinFingerprint
      , GHC.Utils.CodeGen.Platform.ARM64                                as  CodeGen.Platform.ARM64
      , GHC.Utils.CodeGen.Platform.ARM                                  as  CodeGen.Platform.ARM
      , GHC.Utils.CodeGen.Platform                                      as  CodeGen.Platform
      , GHC.Utils.CodeGen.Platform.NoRegs                               as  CodeGen.Platform.NoRegs
      , GHC.Utils.CodeGen.Platform.PPC                                  as  CodeGen.Platform.PPC
      , GHC.Utils.CodeGen.Platform.PPC_Darwin                           as  CodeGen.Platform.PPC_Darwin
      , GHC.Utils.CodeGen.Platform.SPARC                                as  CodeGen.Platform.SPARC
      , GHC.Utils.CodeGen.Platform.X86_64                               as  CodeGen.Platform.X86_64
      , GHC.Utils.CodeGen.Platform.X86                                  as  CodeGen.Platform.X86
      , GHC.Utils.CodeGen.Primitive                                     as  CPrim
      , GHC.Utils.CodeGen.StaticPtrTable                                as  StaticPtrTable
      , GHC.Utils.Elf                                                   as  Elf
      , GHC.Utils.Error                                                 as  ErrUtils
      , GHC.Utils.Exception                                             as  Exception
      , GHC.Utils.FileCleanup                                           as  FileCleanup
      , GHC.Utils.Fingerprint                                           as  Fingerprint
      , GHC.Utils.Handle.BufferedWrite                                  as  BufWrite
      , GHC.Utils.IO.Unsafe                                             as  FastFunctions
      , GHC.Utils.Json                                                  as  Json
      , GHC.Utils.Lexeme                                                as  Lexeme
      , GHC.Utils.Monad                                                 as  MonadUtils
      , GHC.Utils.Monad.IOEnv                                           as  IOEnv
      , GHC.Utils.Monad.ListT                                           as  ListT
      , GHC.Utils.Monad.State                                           as  State
      , GHC.Utils.Outputable                                            as  Outputable
      , GHC.Utils.Panic                                                 as  Panic
      , GHC.Utils.Platform                                              as  Platform
      , GHC.Utils.PrettyPrint                                           as  Pretty
      , GHC.Utils.PrettyPrint.Colour                                    as  PprColour
      , GHC.Utils.PrettyPrint.TyThing                                   as  PprTyThing
      , GHC.Utils.SysTools                                              as  SysTools
      , GHC.Utils.SysTools.Terminal                                     as  SysTools.Terminal
